# patchwork

./: .gitignore  CLAUDE.md  hx.py  pyproject.toml
.claude/skills/write-tests/: SKILL.md
assets/: model-info.json
docs/: ai-agent-ux-report.md
docs/manual/: block-limits-dsp.md  effect-categories.md  glossary.md  index.md  parameters-amp-cab.md  parameters-common.md  preset-patterns.md  signal-chain.md  snapshots.md
docs/plans/: 01-scaffold.md  04-query-commands.md  05-manual-extraction.md  06-preset-move-block.md  07-model-subcommand.md  08-models-rename.md  09-based-on-field.md  10-dsp-load-validation.md  build-cache-cmd.md  hx-stomp-preset-tool.md  manual-extraction.md
docs/schemas/: helix-controls.md  model-catalog.md  models.md  preset-hlx.md
hxlib/: __init__.py  cli.py  db.py  models.py  preset.py
hxlib/cli/: __init__.py  _browse.py  _build_cache.py  _common.py  _inspect.py  _model.py  _preset.py  _search.py
scripts/: check.py
tests/: conftest.py  test_db.py  test_models.py  test_preset.py
tests/fixtures/assets/: delay.models  distortion.models  model-info.json
tests/fixtures/assets/res/: HX_ModelCatalog.json
