[project]
name = "patchwork"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
check = "scripts.check:main"
hx = "hxlib.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hxlib", "scripts"]

[dependency-groups]
dev = [
  "pyright>=1.1",
  "pytest>=8",
  "ruff>=0.9",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["hxlib", "hx.py", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
